--- a/pdf-to-text/package.json
+++ b/pdf-to-text/package.json
@@ -2,11 +2,11 @@
   "name": "pdf-to-text",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node build/index.js",
+    "build": "tsc --outDir ./build",
+    "start": "ts-node src/index.ts",
     "dev": "tsc --watch"
   },
   "keywords": [],
@@ -16,5 +16,9 @@
     "@aws-sdk/client-textract": "^3.574.0",
     "@aws-sdk/lib-storage": "^3.574.0",
     "aws-sdk": "^2.1618.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
