--- a/rust-projects/redis/Cargo.toml
+++ b/rust-projects/redis/Cargo.toml
@@ -7,5 +7,4 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.37.0", features = ["full"] }
-axum = "0.7.5"
-tracing-subscriber = "0.3.18"
+clap = "4.5.4"
