--- a/rust-projects/tokio-project/Cargo.toml
+++ b/rust-projects/tokio-project/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "url-shortener"
+name = "tokio-project"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.5"
-serde = "1.0.203"
-serde_json = "1.0.117"
-tokio = { version = "1.38.0", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+mini-redis = "0.4"
