--- a/rust-projects/url-shortener/Cargo.toml
+++ b/rust-projects/url-shortener/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.5"
-serde = "1.0.203"
+serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
+redis = { version = "0.25.4", features = ["tokio-comp"] }
