--- a/rust-projects/url-shortener/Cargo.toml
+++ b/rust-projects/url-shortener/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 redis = { version = "0.25.4", features = ["tokio-comp"] }
+xxhash-rust = {version = "0.8.10", features = ["xxh3"]}
