--- a/rust-projects/url-shortener/Cargo.toml
+++ b/rust-projects/url-shortener/Cargo.toml
@@ -12,3 +12,9 @@ serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 redis = { version = "0.25.4", features = ["tokio-comp"] }
 xxhash-rust = {version = "0.8.10", features = ["xxh3"]}
+tower = "0.4.13"
+hyper = { version = "1.3.1", features = ["full"] }
+
+
+[dev-dependencies]
+reqwest = "0.12.4"
