--- a/rust-smart-contracts/donation-contract/Cargo.toml
+++ b/rust-smart-contracts/donation-contract/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "donation-contract"
-description = "cargo-near-new-project-description"
+description = "Donation Contract Example for NEAR Protocol"
 version = "0.1.0"
 edition = "2021"
 # TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
-# NEP-0330 is automatically implemented for all contracts built with near-sdk-rs.
+# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
 # Link to the repository will be available via `contract_source_metadata` view-function.
 #repository = "https://github.com/xxx/xxx"
 
@@ -13,10 +13,11 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = "5.0.0-alpha.1"
+near-sdk = { version = "5.1.0", features = ["legacy"] }
 
 [dev-dependencies]
-near-workspaces = { version = "0.9.0", default-features = false, features = ["install", "unstable"] }
+near-sdk = { version = "5.0.0", features = ["unit-testing"] }
+near-workspaces = { version = "0.10.0", features = ["unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1"
 
