--- a/rust-smart-contracts/crossword-contract/Cargo.toml
+++ b/rust-smart-contracts/crossword-contract/Cargo.toml
@@ -13,7 +13,8 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = "5.0.0-alpha.1"
+near-sdk = {version = "5.0.0-alpha.1", features = ["unit-testing"]}
+hex="0.4.3"
 
 [dev-dependencies]
 near-workspaces = { version = "0.9.0", default-features = false, features = ["install", "unstable"] }
