Add code to call contract

--- a/set-contract/package.json
+++ b/set-contract/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "contract:call": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "hardhat": "^2.22.5"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.1"
   }
 }
