Update code to user metamask for provider

--- a/set-contract/package.json
+++ b/set-contract/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "contract:call": "ts-node src/index.ts"
+    "test": "echo test"
   },
   "keywords": [],
   "author": "",
