--- a/rust-smart-contracts/crossword-contract/Cargo.toml
+++ b/rust-smart-contracts/crossword-contract/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-near-sdk = {version = "5.0.0-alpha.1", features = ["unit-testing"]}
+near-sdk = {version = "5.0.0-alpha.1", features = ["unit-testing", "legacy"]}
 hex="0.4.3"
 
 [dev-dependencies]
