--- a/alchemy/eth-bootcamp/ecdsa-node/client/package.json
+++ b/alchemy/eth-bootcamp/ecdsa-node/client/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "tsc && vite build",
     "dev": "vite",
-    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,10 +16,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^2.1.0",
     "sass": "^1.54.9",
+    "typescript": "^5.5.3",
     "vite": "^3.1.0"
   }
 }
