--- a/rust-smart-contracts/mock-signer-chain-signatures/Cargo.toml
+++ b/rust-smart-contracts/mock-signer-chain-signatures/Cargo.toml
@@ -20,9 +20,12 @@ schemars = "0.8.21"
 tokio = "1.38.1"
 
 [dev-dependencies]
+borsh = "1.5.0"
 near-workspaces = { version = "0.11.0", default-features = false, features = ["install", "unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+schemars = "0.8"
 
 [profile.release]
 codegen-units = 1
@@ -33,3 +36,6 @@ debug = false
 panic = "abort"
 # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
 overflow-checks = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.2.12", features = ["custom"] }
