--- a/rust-smart-contracts/mock-signer-chain-signatures/Cargo.toml
+++ b/rust-smart-contracts/mock-signer-chain-signatures/Cargo.toml
@@ -14,26 +14,19 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 near-sdk = "5.1"
-ethers-core ="2.0.13"
+ethers-core = "2.0.13"
+k256 = { version = "0.13.1", features = ["serde"] }
 ethers-signers = "2.0.14"
 schemars = "0.8.21"
 tokio = "1.38.1"
-k256 = { version = "0.13.1", features = [
-    "sha256",
-    "ecdsa",
-    "serde",
-    "arithmetic",
-    "expose-field",
-] }
 borsh = "1.5.0"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 
+
 [dev-dependencies]
 near-workspaces = { version = "0.11.0", default-features = false, features = ["install", "unstable"] }
 tokio = { version = "1.12.0", features = ["full"] }
-
-
 
 [profile.release]
 codegen-units = 1
