--- a/alchemy/eth-bootcamp/json-rpc-alchemy/package.json
+++ b/alchemy/eth-bootcamp/json-rpc-alchemy/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "alchemy-sdk": "^3.3.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.2"
   }
 }
