--- a/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
+++ b/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
@@ -19,4 +19,13 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
-
+# hex = "0.4.3"
+# interfaces = { path = "../interfaces" }
+# k256 = "0.13.4"
+# sha3 = "0.10.0"
+rsa = { version = "0.9.8", features = ["sha2"] }
+schemars = "0.8.22"
+sha2 = "0.10.8"
+serde_json = "1.0.140"
+# Pinned for compatibility with rustc 1.79.0-dev
+base64ct = "=1.6.0" 
