--- a/solana/oversized-transaction/package.json
+++ b/solana/oversized-transaction/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
-    "borsh": "^2.0.0"
+    "borsh": "^2.0.0",
+    "js-sha256": "^0.11.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
