--- a/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
+++ b/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
@@ -23,7 +23,4 @@ hex = "0.4.3"
 sha3 = "0.10.8"
 schemars = "0.8.22"
 sha2 = "0.10.8"
-p256 = "0.13.2"
-borsh = "1.5.7"
-# Tagged for compatibility with Solana Program
-base64ct = "=1.6.0" 
+bytemuck = { version = "1.22.0", features = ["derive"] }
