--- a/solana/oversized-transaction/package.json
+++ b/solana/oversized-transaction/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
     "borsh": "^2.0.0",
-    "js-sha256": "^0.11.0"
+    "elliptic": "^6.6.1",
+    "js-sha256": "^0.11.0",
+    "viem": "^2.26.3"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
