--- a/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
+++ b/solana/oversized-transaction/programs/oversized-transaction/Cargo.toml
@@ -24,3 +24,6 @@ sha3 = "0.10.8"
 schemars = "0.8.22"
 sha2 = "0.10.8"
 bytemuck = { version = "1.22.0", features = ["derive"] }
+
+# Test crates
+# solana-precompile-error = "2.2.1"
