--- a/solana/oversized-transaction/package.json
+++ b/solana/oversized-transaction/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
     "borsh": "^2.0.0",
+    "crypto": "^1.0.1",
     "js-sha256": "^0.11.0",
     "viem": "^2.26.3"
   },
