Use package for signature normalization

--- a/solana/oversized-transaction/package.json
+++ b/solana/oversized-transaction/package.json
@@ -6,9 +6,9 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
+    "@noble/curves": "^1.8.2",
     "borsh": "^2.0.0",
     "crypto": "^1.0.1",
-    "js-sha256": "^0.11.0",
     "viem": "^2.26.3"
   },
   "devDependencies": {
